--- a/AdminClient/css/style.css
+++ b/AdminClient/css/style.css
@@ -1,4 +1,5 @@
 body {
+	font-size: 16px;
     font-family: "Lato", sans-serif;
 }
 
@@ -19,7 +20,7 @@ body {
 .sidenav a {
     padding: 8px 8px 8px 32px;
     text-decoration: none;
-    font-size: 25px;
+    font-size: 16px;
     color: #818181;
     display: block;
     transition: 0.3s;
@@ -45,11 +46,16 @@ body {
 
 .loginTable
 {
-	color:white
+	color:#818181;
+}
+.loginTable:hover
+{
+	color: #f1f1f1;
 }
 .loginCaption
 {
 	text-align:right;
+	font-size: 16px;
 }
 .adminTable
 {
