--- a/AdminClient/css/style.css
+++ b/AdminClient/css/style.css
@@ -1,6 +1,12 @@
+html,body
+{ 
+	min-height: 100% !important;
+	height:100%; 
+}
 body {
 	font-size: 16px;
     font-family: "Lato", sans-serif;
+    
 }
 ul{
     color: #818181;
